Fixed Sidebar icon alignment

--- a/ccms/src/App.css
+++ b/ccms/src/App.css
@@ -72,9 +72,7 @@
   display: flex;
   flex-direction: column;
   justify-content: top;
-  justify-items: center;
   margin: 0 0 30px 0;
-
 }
 
 .ListSpace {
@@ -83,7 +81,7 @@
   color: blue;
   font-weight: bolder;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  text-align: center;
+  text-align: left;
 }
 
 .RightPanel {
